<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_component"
            android:orientation="vertical">

            <EditText
                style="@style/editText"
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:hint="@string/text_hint_name"/>

            <View
                style="@style/separator" />

            <EditText
                style="@style/editText"
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_component"
                android:hint="@string/text_hint_address"/>

            <View
                style="@style/separator" />

            <EditText
                style="@style/editText"
                android:id="@+id/edtCashier"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_component"
                android:hint="@string/text_hint_cashier"/>

            <View
                style="@style/separator"/>

            <EditText
                style="@style/editText"
                android:id="@+id/edtVersion"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_component"
                android:hint="@string/text_hint_version"/>

            <View
                style="@style/separator"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_component">

                <Button
                    style="@style/button"
                    android:id="@+id/btnCancel"
                    android:layout_toLeftOf="@+id/btnSave"
                    android:layout_marginRight="@dimen/margin_component"
                    android:text="@string/text_cancel" />

                <Button
                    style="@style/button"
                    android:id="@+id/btnSave"
                    android:layout_alignParentRight="true"
                    android:text="@string/text_save" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>