<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">

    <Spinner
        android:id="@+id/spDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:spinnerMode="dropdown" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator"
        android:layout_below="@+id/spDevice"
        android:layout_marginTop="@dimen/separator_margin"
        android:background="@color/TextColorGrey"/>

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_style_padding"
        android:visibility="gone"
        android:layout_below="@+id/separator"/>

    <EditText
        style="@style/editText"
        android:id="@+id/edtPrint"
        android:layout_width="match_parent"
        android:layout_below="@+id/imgPreview"
        android:padding="@dimen/component_padding"
        android:hint="@string/app_name">

    </EditText>

    <Button
        android:id="@+id/btnEnable"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:text="@string/text_enable_bluetooth" />

    <Button
        android:id="@+id/btnScan"
        style="@style/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/button_margin"
        android:textSize="@dimen/text_font_size_device"
        android:text="@string/text_scan"/>

    <Button
        android:id="@+id/btnConnect"
        style="@style/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_font_size_device"
        android:text="@string/text_connect"/>

    <Button
        android:id="@+id/btnPrint"
        style="@style/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/text_print_text"/>

</RelativeLayout>