<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_dialog">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_product_add"
            android:textColor="@color/HPFontColorBlue"
            android:textSize="@dimen/text_font_size_product_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_component"/>

        <EditText
            style="@style/editText"
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:background="@color/HPLightGreyBackground"
            android:hint="@string/text_hint_product_name"
            android:inputType="text"/>

        <EditText
            style="@style/editText"
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:background="@color/HPLightGreyBackground"
            android:hint="@string/text_hint_product_price"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/spUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/HPLightGreyBackground"
            android:layout_marginBottom="@dimen/margin_component" />

        <EditText
            style="@style/editText"
            android:id="@+id/edtTag"
            android:layout_width="match_parent"
            android:background="@color/HPLightGreyBackground"
            android:hint="@string/text_hint_product_tag"
            android:inputType="textCapWords"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_component">

            <TextView
                android:id="@+id/txtTempThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/input_login"
                android:textSize="@dimen/text_font_size_product_add_thumbnail"
                android:textColorHint="@color/input_login_hint"
                android:layout_centerVertical="true"
                android:hint="@string/text_hint_product_thumbnail"/>

            <TextView
                android:id="@+id/txtThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                style="@style/button"
                android:id="@+id/btnThumbnail"
                android:layout_alignParentRight="true"
                android:text="@string/button_choose"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="@dimen/padding_component">

            <TextView
                android:id="@+id/txtTempImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_size_product_add_thumbnail"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:layout_centerVertical="true"
                android:hint="@string/text_hint_product_image"/>

            <TextView
                android:id="@+id/txtImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                style="@style/button"
                android:id="@+id/btnImage"
                android:layout_alignParentRight="true"
                android:text="@string/button_choose"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imgImage"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_component">

            <Button
                style="@style/button"
                android:id="@+id/btnSave"
                android:layout_alignParentRight="true"
                android:text="@string/save"/>

            <Button
                style="@style/button"
                android:id="@+id/btnCancel"
                android:layout_toLeftOf="@+id/btnSave"
                android:layout_marginRight="@dimen/margin_component"
                android:text="@string/cancel"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>