<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <EditText
            style="@style/editText"
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:hint="@string/text_hint_product_name"
            android:inputType="text"/>

        <EditText
            style="@style/editText"
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:hint="@string/text_hint_product_price"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/spUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/component_margin" />

        <EditText
            style="@style/editText"
            android:id="@+id/edtTag"
            android:layout_width="match_parent"
            android:hint="@string/text_hint_product_tag"
            android:inputType="textCapWords"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/component_padding">

            <TextView
                android:id="@+id/txtTempThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/text_hint_product_thumbnail"/>

            <TextView
                android:id="@+id/txtThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                style="@style/button"
                android:id="@+id/btnThumbnail"
                android:layout_alignParentRight="true"
                android:text="@string/button_choose"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/component_padding">

            <TextView
                android:id="@+id/txtTempImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/text_hint_product_image"/>

            <TextView
                android:id="@+id/txtImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                style="@style/button"
                android:id="@+id/btnImage"
                android:layout_alignParentRight="true"
                android:text="@string/button_choose"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imgImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>